// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns a valid CSS 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
}

<T>
  <div
    className="emotion-0 emotion-1"
  />
</T>
`;

exports[`works with "withFallback" powered styles 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  color: #6C7983;
  color: #8F9BA3;
  color: #28beb8;
  color: rgba(0,193,187,0.6);
}

<T>
  <div
    className="emotion-0 emotion-1"
  />
</T>
`;
